--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "tsc && npx prisma generate && npx prisma migrate deploy",
+    "start": "node dist/app.js",
     "dev": "nodemon src/server.ts",
     "test": "npx dotenv-cli -e .env.test jest -i",
     "migratetest": "npx dotenv-cli -e .env.test prisma migrate dev",
