--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "compilerOptions": {
-    "target": "es2016",                              
-    "module": "commonjs",                            
-    "esModuleInterop": true,                        
-    "forceConsistentCasingInFileNames": true,          
-    "strict": true,                                    
-    "skipLibCheck": true                                
+    "outDir": "dist",
+    "target": "es2016",                         
+    "module": "commonjs",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,                                         
+    "skipLibCheck": true,                        
   }
 }
