--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "tsc && npx prisma generate && npx prisma migrate deploy",
     "start": "node dist/app.js",
     "dev": "nodemon src/server.ts",
-    "test": "npx dotenv-cli -e .env.test jest -i",
-    "migratetest": "npx dotenv-cli -e .env.test prisma migrate dev",
+    "test": "jest -i",
     "migrate": "npx prisma migrate dev",
     "studio": "npx prisma studio"
   },
@@ -16,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^7.5.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/cryptr": "^4.0.1",
@@ -24,7 +24,9 @@
     "@types/jest": "^29.0.2",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/supertest": "^2.0.12",
     "jest": "^29.0.3",
+    "supertest": "^6.2.4",
     "ts-jest": "^29.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
